# msal-bearer

./: README.md  pyproject.toml
src/msal_bearer/: authenticator.py  bearerauth.py
tests/: test_authenticator_properties.py  test_bearerauth.py
