[project]
name = "msal-bearer"
version = "1.4.5"
description = "Python package to get auth token for a msal client application using msal, msal-extensions and azure-identity."
authors = [{ name = "Åsmund Våge Fannemel", email = "asmf@equinor.com" }]
requires-python = ">=3.9.2,<4"
readme = "README.md"
license = "MIT"
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "msal>=1.36.0,<2",
    "msal-extensions>=1.3.1,<2",
    "cryptography>=48.0.0",
    "azure-identity>=1.25.3,<2",
]

[project.urls]
Repository = "https://github.com/Equinor/msal-bearer"

[dependency-groups]
dev = ["black>=25.10.0,<26"]

[tool.uv]
default-groups = "all"

[build-system]
requires = ["uv_build>=0.11.16,<0.12"]
build-backend = "uv_build"
